--- a/PatientNode/android/app/src/main/res/values/strings.xml
+++ b/PatientNode/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PatientNode</string>
+    <string name="location_permission">Ứng dụng cần quyền truy cập vị trí để hiển thị trên bản đồ</string>
+    <string name="location_permission_title">Quyền truy cập vị trí</string>
+    <string name="location_permission_message">Vui lòng cấp quyền truy cập vị trí cho ứng dụng</string>
 </resources>
